--- a/client/src/pages/singleVet/singleVet.css
+++ b/client/src/pages/singleVet/singleVet.css
@@ -12,6 +12,10 @@
   border-color: var(--naga-red);
 }
 
+.nagadb__singleVet-container__title h1 {
+  flex: 2; 
+}
+
 .nagadb__singleVet-container__info {
 
   padding: .5rem;
@@ -26,6 +30,9 @@
   font-size: 25px;
   font-weight: 500;
   margin: .5rem;
+  overflow-wrap: break-word; 
+  word-wrap: break-word; 
+  word-break: break-word; 
 }
 
 .nagadb__singleVet-container__cemeteryInfo {
@@ -99,4 +106,11 @@
   .hidden_name {
     display: flex;
   }
+}
+
+@media screen and (max-width: 500px) {
+  .nagadb__singleVet-container__info h2 {
+    font-size: 22px;
+  } 
+  
 }
